# my-finance-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-installers.yml
data/: schema.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs
src-tauri/src/backend/: assets.rs  commands.rs  finance.rs  ledger.rs  models.rs  security.rs  settings.rs  snapshot.rs  storage.rs  vault.rs
src/components/: AppLayout.tsx  AppSidebar.tsx  BrandMark.tsx  CommandPalette.tsx  OnboardingFlow.tsx  StatementImportDialog.tsx
src/lib/: analytics.ts  asset-import.ts  command-palette.ts  currency.ts  desktop.ts  market-data.ts  pdf-text.ts  quick-add.ts  sample-data.ts  statement-import.ts  store.ts  types.ts
src/pages/: AssetsPage.tsx  Dashboard.tsx  FinancePage.tsx  LedgerPage.tsx  SettingsPage.tsx  TaxPage.tsx  VaultPage.tsx
src/test/: statement-import.test.ts
