[package]
name = "finos"
version = "0.1.0"
description = "FinOS desktop application"
authors = ["Raghav"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "finos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
aes-gcm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
pbkdf2 = "0.12"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
